--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "codemirror": "^5.44.0",
     "expo": "^32.0.0",
     "marked": "^0.6.0",
     "react": "16.5.0",
+    "react-codemirror2": "^5.1.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-action-button": "^2.8.5",
     "react-native-elements": "^1.0.0",
