--- a/package.json
+++ b/package.json
@@ -23,18 +23,20 @@
     "redux": "^4.0.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "^24.3.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-preset-expo": "^5.0.0",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.7.2",
+    "render-if": "^0.1.1",
     "style-loader": "^0.19.0",
-    "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3",
-    "webpack-node-externals": "^1.7.2"
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   },
   "private": true
 }
