--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "expo-file-system": "~7.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.4.2",
