Update old dependencies

--- a/package.json
+++ b/package.json
@@ -8,20 +8,28 @@
   },
   "dependencies": {
     "codemirror": "^5.44.0",
-    "expo": "^35.0.0",
-    "marked": "^0.6.0",
-    "react": "16.8.3",
+    "expo": "^36.0.0",
+    "expo-file-system": "~8.0.0",
+    "marked": "^0.8.0",
+    "react": "16.9.0",
     "react-codemirror2": "^5.1.0",
-    "react-dom": "^16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-action-button": "^2.8.5",
     "react-native-elements": "^1.0.0",
+    "react-native-gesture-handler": "^1.5.2",
+    "react-native-reanimated": "^1.4.0",
     "react-native-render-html": "^4.1.1",
-    "react-native-vector-icons": "^6.1.0",
-    "react-navigation": "^3.0.9",
+    "react-native-safe-area-context": "0.6.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "7.4.3",
+    "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.3.3",
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.6.2",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
-    "expo-file-system": "~7.0.0"
+    "s": "^1.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.4.2",
