Workaround to load local html on react-native-webview
https://github.com/react-native-community/react-native-webview/issues/746#issuecomment-519662691

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "codemirror": "^5.44.0",
     "expo": "^36.0.0",
+    "expo-asset-utils": "^1.2.0",
     "expo-file-system": "~8.0.0",
     "marked": "^0.8.0",
     "react": "16.9.0",
